tp-kubernetes-ingress-traefik/traefik-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: traefik-web-ui
 namespace: traefik
 annotations:
   kubernetes.io/ingress.class: traefik
spec:
 rules:
 - host: "traefik.example.tld"
   http:
     paths:
     - backend:
         serviceName: traefik-web-ui
         servicePort: 80
